--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,16 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - name: &install-emacs-linux
+      if: ${{ github.event.inputs.debug == 'true' }}
+      run: |
+        sudo apt install emacs
+    - name: &setup-ssh-debug
+      if: ${{ github.event.inputs.debug == 'true' }}
+      uses: mxschmitt/action-tmate@v3
+      with:
+        detached: true
+      timeout-minutes: 60
     - name: Setup Just
       uses: extractions/setup-just@v2
     - name: Install
@@ -59,16 +69,6 @@ jobs:
         just init
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
-    - name: Install Emacs
-      if: ${{ github.event.inputs.debug == 'true' }}
-      run: |
-        sudo apt install emacs
-    - name: Setup tmate session
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        detached: true
-      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         just test-all
@@ -104,6 +104,10 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - *setup-ssh-debug
+    - &install-vim-windows
+      if: ${{ github.event.inputs.debug == 'true' }}
+      uses: rhysd/action-setup-vim@v1
     - name: Setup Just
       uses: extractions/setup-just@v2
     - name: Install
@@ -111,19 +115,9 @@ jobs:
         just init
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
-    - name: Install VIM
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: rhysd/action-setup-vim@v1
-    - name: Setup tmate session
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        detached: true
-      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         just test-all
-
     - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
@@ -153,30 +147,24 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - &install-emacs-macos
+      if: ${{ github.event.inputs.debug == 'true' }}
+      run: |
+        brew install emacs
+    - *setup-ssh-debug
     - name: Setup Just
       uses: extractions/setup-just@v2
     - name: Set up Homebrew
       if: ${{ github.event.inputs.debug == 'true' }}
       uses: Homebrew/actions/setup-homebrew@master
-    - name: Install Emacs
-      if: ${{ github.event.inputs.debug == 'true' }}
-      run: |
-        brew install emacs
     - name: Install
       run: |
         just init
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
-    - name: Setup tmate session
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        detached: true
-      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         just test-all
-
     - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
@@ -205,6 +193,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - *install-emacs-linux
+    - *setup-ssh-debug
     - name: Setup Just
       uses: extractions/setup-just@v2
     - name: Install
@@ -212,24 +202,56 @@ jobs:
         just init
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
-    # - name: Install Fish shell
-    #   run: |
-    #     sudo apt-get update
-    #     sudo apt-get install -y fish
-    - name: Install Emacs
-      if: ${{ github.event.inputs.debug == 'true' }}
-      run: |
-        sudo apt install emacs
-    - name: Setup tmate session
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        detached: true
-      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         just test tests/shellcompletion/test_bash.py
         just test-bash-resolution
+
+    - name: Store coverage files
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.COVERAGE_FILE }}
+        path: ${{ env.COVERAGE_FILE }}
+
+  linux-fish-complete:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.13']
+        django-version:
+          - '3.2' # LTS April 2024
+          - '5.1' # December 2025
+        exclude:
+          - python-version: '3.9'
+            django-version: '5.1'
+          - python-version: '3.13'
+            django-version: '3.2'
+    env:
+      COVERAGE_FILE: linux-fish-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+    - *install-emacs-linux
+    - *setup-ssh-debug
+    - name: Setup Just
+      uses: extractions/setup-just@v2
+    - name: Install
+      run: |
+        just init
+        just install
+        just pin-dependency Django~=${{ matrix.django-version }}
+    - name: Install Fish shell
+      run: |
+        sudo apt-get update
+        sudo apt-get install -y fish
+    - name: Run Unit Tests
+      run: |
+        just test tests/shellcompletion/test_fish.py
+        just test-fish-resolution
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -260,6 +282,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - *install-emacs-macos
+    - *setup-ssh-debug
     - name: Setup Just
       uses: extractions/setup-just@v2
     - name: Install Homebrew and Zshell Completion
@@ -280,22 +304,11 @@ jobs:
         chmod -R go-w /opt/homebrew/share/zsh
         source ~/.zshrc
         sudo chsh -s /bin/zsh runner
-    - name: Install Emacs
-      if: ${{ github.event.inputs.debug == 'true' }}
-      run: |
-        brew install emacs
-
     - name: Install
       run: |
         just init
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
-    - name: Setup tmate session
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        detached: true
-      timeout-minutes: 60
     - name: Run Unit Tests
       shell: zsh {0}
       run: |
@@ -331,29 +344,68 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+    - *install-emacs-macos
+    - *setup-ssh-debug
     - name: Setup Just
       uses: extractions/setup-just@v2
-
-    - name: Install Emacs
-      if: ${{ github.event.inputs.debug == 'true' }}
-      run: |
-        brew install emacs
-
     - name: Install
       run: |
         just init
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
-    - name: Setup tmate session
-      if: ${{ github.event.inputs.debug == 'true' }}
-      uses: mxschmitt/action-tmate@v3
-      with:
-        detached: true
-      timeout-minutes: 60
     - name: Run Unit Tests
       run: |
         just test tests/shellcompletion/test_bash.py || exit 1
         just test-bash-resolution
+
+    - name: Store coverage files
+      uses: actions/upload-artifact@v4
+      with:
+        name: ${{ env.COVERAGE_FILE }}
+        path: ${{ env.COVERAGE_FILE }}
+
+  macos-fish-complete:
+    runs-on: macos-latest
+    strategy:
+      matrix:
+        python-version: ['3.9', '3.13']
+        django-version:
+          - '3.2' # LTS April 2024
+          - '5.1' # December 2025
+        exclude:
+          - python-version: '3.9'
+            django-version: '5.1'
+          - python-version: '3.13'
+            django-version: '3.2'
+
+    env:
+      COVERAGE_FILE: macos-fish-py${{ matrix.python-version }}-dj${{ matrix.django-version }}.coverage
+
+    steps:
+    - uses: actions/checkout@v4
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v5
+      with:
+        python-version: ${{ matrix.python-version }}
+    - *install-emacs-macos
+    - *setup-ssh-debug
+    - name: Setup Just
+      uses: extractions/setup-just@v2
+    - name: Install Fish
+      run: |
+        brew install fish
+        sudo bash -c 'echo $(which fish) >> /etc/shells'
+        chsh -s $(which fish)
+    - name: Install
+      run: |
+        just init
+        just install
+        just pin-dependency Django~=${{ matrix.django-version }}
+    - name: Run Tab Completion Tests
+      shell: fish {0}
+      run: |
+        just test tests/shellcompletion/test_fish.py || exit 1
+        just test-fish-resolution
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -384,7 +436,8 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
-
+    - *install-vim-windows
+    - *setup-ssh-debug
     - name: Add to Poetry to PATH
       run: echo "C:\Users\runneradmin\.local\bin" >> $env:GITHUB_PATH
       shell: powershell
@@ -396,7 +449,7 @@ jobs:
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
       shell: powershell
-    - name: Run Unit Tests
+    - name: Run Tab Completion Tests
       run: |
         just test tests/shellcompletion/test_powershell.py
         just test-powershell-resolution
@@ -413,20 +466,22 @@ jobs:
         path: ${{ env.COVERAGE_FILE }}
 
   coverage-combine:
-    needs: [test-linux, test-windows, test-macos, linux-bash-complete, macos-zsh-complete, windows-powershell-complete]
+    needs: [
+      test-linux,
+      test-windows,
+      test-macos,
+      linux-bash-complete,
+      linux-fish-complete,
+      macos-zsh-complete,
+      macos-bash-complete,
+      macos-fish-complete,
+      windows-powershell-complete
+    ]
     runs-on: ubuntu-latest
 
     steps:
-      - name: Install Emacs
-        if: ${{ github.event.inputs.debug == 'true' }}
-        run: |
-          sudo apt install emacs
-      - name: Setup tmate session
-        if: ${{ github.event.inputs.debug == 'true' }}
-        uses: mxschmitt/action-tmate@v3
-        with:
-          detached: true
-        timeout-minutes: 60
+      - *install-emacs-linux
+      - *setup-ssh-debug
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
       - name: Setup Just
