--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -342,9 +342,8 @@ jobs:
     - name: Run Unit Tests
       shell: zsh {0}
       run: |
-        just test ./tests/shellcompletion/test_shell_resolution.py::test_detect_shell
         just test tests/shellcompletion/test_zsh.py || exit 1
-        just test-zsh-resolution
+      # just test-zsh-resolution
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -395,7 +394,7 @@ jobs:
     - name: Run Unit Tests
       run: |
         just test tests/shellcompletion/test_bash.py || exit 1
-        just test-bash-resolution
+      #  just test-bash-resolution
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -452,7 +451,7 @@ jobs:
       shell: fish {0}
       run: |
         just test tests/shellcompletion/test_fish.py || exit 1
-        just test-fish-resolution
+      #  just test-fish-resolution
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
