--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -501,16 +501,20 @@ jobs:
         just install
         just pin-dependency Django~=${{ matrix.django-version }}
       shell: powershell
-    - name: Run Tab Completion Tests
+    - name: Run Powershell Tab Completion Tests
       run: |
         just test tests/shellcompletion/test_powershell.py
         just test-powershell-resolution
       shell: powershell
-    - name: Detect PWSH
+    - name: Run PWSH Tab Completion Tests
       run: |
         just test tests/shellcompletion/test_shell_resolution.py::TestShellResolution::test_pwsh
         just test-pwsh-resolution
       shell: pwsh
+    - name: Test CMD shell failure
+      run: |
+        poetry run pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+      shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
