--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -218,9 +218,8 @@ jobs:
         just pin-dependency Django~=${{ matrix.django-version }}
     - name: Test Tab Completion
       run: |
-        just test tests/shellcompletion/test_bash.py
-        just test-bash-resolution
-        just test ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+        just test-bash
+        just test ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure || exit 1
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -272,9 +271,7 @@ jobs:
         sudo apt-get install -y fish
     - name: Test Tab Completion
       run: |
-        just test tests/shellcompletion/test_fish.py
-        just test-fish-resolution
-        just test tests/test_parser_completers.py
+        just test-fish
       shell: fish {0}
 
     - name: Store coverage files
@@ -346,8 +343,7 @@ jobs:
     - name: Run Unit Tests
       shell: zsh {0}
       run: |
-        just test tests/shellcompletion/test_zsh.py || exit 1
-      # just test-zsh-resolution
+        just test-zsh || exit 1
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -397,8 +393,7 @@ jobs:
         just pin-dependency Django~=${{ matrix.django-version }}
     - name: Run Unit Tests
       run: |
-        just test tests/shellcompletion/test_bash.py || exit 1
-      #  just test-bash-resolution
+        just test-bash || exit 1
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -454,9 +449,7 @@ jobs:
     - name: Run Tab Completion Tests
       shell: fish {0}
       run: |
-        just test tests/shellcompletion/test_fish.py || exit 1
-        just test tests/test_parser_completers.py
-      #  just test-fish-resolution
+        just test-fish || exit 1
 
     - name: Store coverage files
       uses: actions/upload-artifact@v4
@@ -508,11 +501,9 @@ jobs:
       shell: powershell
     - name: Run Powershell Tab Completion Tests
       run: |
-        just test tests/shellcompletion/test_powershell.py
+        just test-powershell
         if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        just test-powershell-resolution
-        if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
-        just test-pwsh-resolution
+        just test-pwsh
         if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
     - name: Test CMD shell failure
