tweak tests for coverage

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -497,6 +497,10 @@ jobs:
         just test-pwsh
         if ($LASTEXITCODE -ne 0) { exit $LASTEXITCODE }
       shell: powershell
+    - name: Test CMD shell failure
+      run: |
+        poetry run pytest --cov-append ./tests/shellcompletion/test_shell_resolution.py::test_get_win_shell_failure
+      shell: cmd
     - name: Store coverage files
       uses: actions/upload-artifact@v4
       with:
