try fix postgres CI by running migrate manually

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -239,6 +239,7 @@ jobs:
             just pin-dependency Django~=${{ matrix.django-version }}
         - name: Run Unit Tests
           run: |
+            just run ./manage.py migrate
             just test-all
         - name: Store coverage files
           uses: actions/upload-artifact@v4
