--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,12 +2,13 @@
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
-[tool.poetry]
+[project]
 name = "django-typer"
 version = "3.0.0"
+requires-python = ">=3.9,<4.0"
 description = "Use Typer to define the CLI for your Django management commands."
 authors = [
-    "Brian Kohan <bckohan@gmail.com>",
+  {name = "Brian Kohan", email = "bckohan@gmail.com"},
 ]
 license = "MIT"
 readme = "README.md"
@@ -16,6 +17,17 @@ homepage = "https://django-typer.readthedocs.io"
 keywords = ["django", "CLI", "management", "Typer", "commands"]
 packages = [
     { include = "django_typer" }
+]
+dependencies = [
+    "Django>=3.2,<6.0",
+    "click>=8.1.8,<9.0",
+    # typer's release history is full of breaking changes for minor versions
+    # given the reliance on some of its private internals we peg the typer
+    # version very strictly to bug fix releases for specific minor lines.
+    "typer-slim>=0.14.0,<0.16.0",
+    "shellingham>=1.5.4,<2.0",
+    # we need this on 3.9 for ParamSpec
+    "typing-extensions>=3.7.4.3; python_version < '3.10'"
 ]
 exclude = ["django_typer/locale"]
 classifiers = [
@@ -45,8 +57,12 @@ classifiers = [
     "Topic :: Software Development :: Libraries :: Python Modules"
 ]
 
+[project.optional-dependencies]
+# this should track typer's rich dependency, so long as our console
+# patches still work - so be sure to test on the low end of the range
+rich = ["rich>=10.11.0,<14.0.0"]
 
-[tool.poetry.urls]
+[project.urls]
 "Homepage" = "https://django-typer.readthedocs.io"
 "Documentation" = "https://django-typer.readthedocs.io"
 "Repository" = "https://github.com/django-commons/django-typer"
@@ -54,28 +70,9 @@ classifiers = [
 "Changelog" = "https://django-typer.readthedocs.io/en/latest/changelog.html"
 "Code_of_Conduct" = "https://github.com/django-commons/membership/blob/main/CODE_OF_CONDUCT.md"
 
-[tool.poetry.scripts]
-manage = "tests.manage:main"
-
-[tool.poetry.dependencies]
-python = ">=3.9,<4.0"
-Django = ">=3.2,<6.0"
-
-click = ">=8.1.8,<9.0"
-
-# typer's release history is full of breaking changes for minor versions
-# given the reliance on some of its private internals we peg the typer
-# version very strictly to bug fix releases for specific minor lines.
-typer-slim = ">=0.14.0,<0.16.0"
-
-# this should track typer's rich dependency, so long as our console
-# patches still work - so be sure to test on the low end of the range
-rich = { version = ">=10.11.0,<14.0.0", optional = true }
-
-shellingham = ">=1.5.4,<2.0"
-
-# we need this on 3.9 for ParamSpec
-typing-extensions = { version = ">=3.7.4.3", markers = "python_version < '3.10'" }
+# for testing
+# [project.scripts]
+# manage = "tests.manage:main"
 
 [tool.poetry.group.dev.dependencies]
 ipdb = "^0.13.13"
@@ -97,9 +94,6 @@ pluggy = "^1.5.0"
 pywinpty = { version = "^2.0.14", markers = "sys_platform == 'win32'" }
 pytest-timeout = "^2.3.1"
 pre-commit = "^4.0.1"
-
-[tool.poetry.extras]
-rich = ["rich"]
 
 [tool.poetry.group.docs]
 optional = true
