--- a/pyproject.toml
+++ b/pyproject.toml
@@ -94,6 +94,7 @@ pluggy = "^1.5.0"
 pywinpty = { version = "^2.0.14", markers = "sys_platform == 'win32'" }
 pytest-timeout = "^2.3.1"
 pre-commit = "^4.0.1"
+django-stubs-ext = ">=4.2.7"
 
 [tool.poetry.group.docs]
 optional = true
