--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -52,6 +52,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-linux
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -105,6 +106,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: setup-ssh-debug
       if: ${{ github.event.inputs.debug == 'true' }}
       uses: mxschmitt/action-tmate@v3
@@ -153,6 +155,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-macos
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -221,6 +224,7 @@ jobs:
           uses: actions/setup-python@v5
           with:
             python-version: ${{ matrix.python-version }}
+            cache: "poetry"
         - name: install-emacs-macos
           if: ${{ github.event.inputs.debug == 'true' }}
           run: |
@@ -268,6 +272,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-linux
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -316,6 +321,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-linux
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -370,6 +376,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-macos
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -430,6 +437,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-macos
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -480,6 +488,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-emacs-macos
       if: ${{ github.event.inputs.debug == 'true' }}
       run: |
@@ -538,6 +547,7 @@ jobs:
       uses: actions/setup-python@v5
       with:
         python-version: ${{ matrix.python-version }}
+        cache: "poetry"
     - name: install-vim-windows
       if: ${{ github.event.inputs.debug == 'true' }}
       uses: rhysd/action-setup-vim@v1
@@ -600,6 +610,8 @@ jobs:
           detached: true
       - uses: actions/checkout@v4
       - uses: actions/setup-python@v5
+        with:
+          cache: "poetry"
       - name: Setup Just
         uses: extractions/setup-just@v2
       - name: Install Release Dependencies
